Add small changes and one more endpoint
